samples/_failures_safe/1761422402_69ae25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11a285fd.c: In function ‘main’:
./samples/SAFE/__tmp_11a285fd.c:145:36: error: expected ‘)’ at end of input
  145 |                 if (!read_matrix(&a
      |                                 ~  ^
      |                                    )
./samples/SAFE/__tmp_11a285fd.c:145:17: error: expected declaration or statement at end of input
  145 |                 if (!read_matrix(&a
      |                 ^~
./samples/SAFE/__tmp_11a285fd.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11a285fd.c:145:17: error: expected declaration or statement at end of input
